--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joyride": "^2.5.3",
     "react-scripts": "5.0.1",
     "rsuite": "^5.24.0",
     "web-vitals": "^2.1.4"
